--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -259,7 +259,7 @@ main .movies-container {
 main .movies-container figure {
   width: 100%;
   height: 100vh;
-  background-image: url("./assets/images/collage-2.jpg");
+  background-image: url("../images/collage-2.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: bottom left;
