--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -25,7 +25,7 @@ header {
   left: 0;
   right: 0;
   background-color: transparent;
-  transition: 0.4s ease;
+  transition: 0.2s ease;
   z-index: 20;
 }
 header.header-bg {
@@ -117,6 +117,7 @@ main .hero-section .wrapper {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
   z-index: 10;
 }
 main .hero-section .wrapper h2 {
@@ -172,9 +173,9 @@ main .compositing-reel .wrapper .ap-reel-tabs {
   justify-content: center;
 }
 main .compositing-reel .wrapper .ap-reel-tabs .ap-reel-tab {
-  padding: 8px 18px;
+  padding: 10px 18px;
   color: #000;
-  font-size: 15px;
+  font-size: 18px;
 }
 main .compositing-reel .wrapper .ap-reel-tabs .ap-reel-tab:hover {
   color: #666;
@@ -291,7 +292,7 @@ main .movies-container {
 main .movies-container figure {
   width: 100%;
   height: 100vh;
-  background-image: url("../images/collage-2.jpg");
+  background-image: url("./assets/images/collage-2.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: bottom left;
@@ -665,7 +666,8 @@ footer span {
 }
 @media only screen and (max-width: 995px) {
   header .wrapper {
-    width: 95%;
+    width: 100%;
+    padding: 10px;
   }
   main .compositing-shots .wrapper ul li {
     flex-basis: 70%;
@@ -686,11 +688,14 @@ footer span {
   .wrapper {
     width: 90%;
   }
+  header .wrapper {
+    border-bottom: 5px solid #4e4e4e;
+  }
   header .wrapper h1 a {
     font-size: 24px;
   }
   header .wrapper .hamburger {
-    display: block;
+    display: initial;
   }
   header .wrapper .hamburger i {
     color: #fff;
@@ -699,15 +704,15 @@ footer span {
   }
   header .wrapper nav {
     display: none;
+    border-top: 5px solid #4e4e4e;
+    border-bottom: 5px solid #4e4e4e;
     position: fixed;
-    top: 55px;
+    top: 67px;
     right: 0;
     left: 0;
     background-color: #222;
   }
   header .wrapper nav ul {
-    padding: 3% 0;
-    border-top: 2px solid #4e4e4e;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -731,6 +736,12 @@ footer span {
   header .wrapper nav ul li a:hover {
     color: #000;
     background-color: #fec503;
+  }
+  header .wrapper nav ul li:first-child {
+    margin-top: 0;
+  }
+  header .wrapper nav ul li:last-child {
+    margin-bottom: 0;
   }
   main .hero-section {
     height: 70vh;
@@ -764,6 +775,10 @@ footer span {
   }
   main .compositing-shots .wrapper ul li div h3 {
     font-size: 14px;
+  }
+  main .compositing-shots .wrapper ul li figure:hover::after, main .compositing-shots .wrapper ul li figure:hover::before {
+    content: "";
+    display: none;
   }
   main .resume-container .wrapper h2 {
     font-size: 28px;
